# srtGen

./: .gitignore  README.md  SETUP.md  app_models.py  audio_utils.py  main.py  pyproject.toml  srt_translate.py  text_utils.py  transcriber.py  translator.py  whisper_net_setup.md
