[project]
name = "srtgen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.2.1",
    "py-curses-editor>=1.3.2",
    "pythonnet>=3.0.5",
    "ttkbootstrap>=1.20.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
